--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   },
   "devDependencies": {
     "@types/jest": "^22.0.0",
-    "@types/lodash": "^4.14.115",
     "@types/lodash.sorteduniq": "^4.2.4",
     "@types/lodash.uniq": "^4.5.4",
     "@types/lodash.uniqwith": "^4.5.4",
+    "@types/luxon": "^1.2.2",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.7",
     "@types/node": "^10.0.3",
-    "ava": "^1.0.0-beta.5.1",
     "codecov": "^3.0.2",
     "colors": "^1.1.2",
     "commitizen": "^2.9.6",
@@ -32,13 +33,13 @@
     "jest": "^22.0.2",
     "lerna": "^3.0.1",
     "lint-staged": "^7.1.3",
-    "lodash.camelcase": "^4.3.0",
-    "npm-run-all": "^4.1.3",
+    "luxon": "^1.3.3",
+    "moment": "^2.0.0",
+    "moment-timezone": "^0.5.21",
     "nyc": "^12.0.2",
     "opn-cli": "^3.1.0",
     "prettier": "^1.13.4",
     "prompt": "^1.0.0",
-    "rimraf": "^2.6.1",
     "semantic-release": "^15.0.0",
     "standard-version": "^4.4.0",
     "trash-cli": "^1.4.0",
@@ -46,11 +47,8 @@
     "ts-node": "^6.0.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
-    "tslint-config-standard": "^7.0.0",
-    "tslint-immutable": "^4.5.4",
     "typedoc": "^0.11.1",
     "typescript": "^2.9.1",
-    "typescript-starter": "^2.3.8",
     "validate-commit-msg": "^2.12.2"
   }
 }
