--- a/packages/luxon-date-adapter/package.json
+++ b/packages/luxon-date-adapter/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@rschedule/moment-date-adapter",
+  "name": "@rschedule/luxon-date-adapter",
   "version": "0.0.6",
-  "description": "An rSchedule DateAdapter for \"moment\" date objects.",
+  "description": "An rSchedule DateAdapter for \"luxon\" DateTime objects.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
   "bugs": "https://gitlab.com/john.carroll.p/rschedule/issues",
@@ -12,7 +12,7 @@
   "license": "MIT",
   "keywords": [
     "rschedule",
-    "momentjs",
+    "luxon",
     "javascript",
     "typescript",
     "recurring",
@@ -67,19 +67,18 @@
   "engines": {
     "node": ">=8.9"
   },
+  "publishConfig": {
+    "registry": "https://registry.yarnpkg.com"
+  },
   "dependencies": {
     "@rschedule/rschedule": "^0.0.6",
     "core-js": "^2.5.7"
   },
   "peerDependencies": {
-    "moment": "^2.0.0"
-  },
-  "optionalDependencies": {
-    "moment-timezone": "^0.5.21"
+    "luxon": "^1.3.3"
   },
   "devDependencies": {
-    "@types/moment": "^2.13.0",
-    "@types/moment-timezone": "^0.5.7",
+    "@types/luxon": "^1.2.2",
     "codecov": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
     "gh-pages": "^1.2.0",
