--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "coveralls": "^3.0.0",
     "cross-env": "^5.0.1",
     "cz-conventional-changelog": "^2.0.0",
+    "@types/date-fns": "^1.29.0",
+    "date-fns": "^1.29.0",
     "husky": "^0.14.0",
     "jest": "^22.0.2",
     "lerna": "^3.0.1",
