--- a/packages/luxon-date-adapter/package.json
+++ b/packages/luxon-date-adapter/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@rschedule/luxon-date-adapter",
-  "version": "0.0.6",
+  "private": true,
+  "version": "0.1.0",
   "description": "An rSchedule DateAdapter for \"luxon\" DateTime objects.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
@@ -71,7 +72,7 @@
     "registry": "https://registry.yarnpkg.com"
   },
   "dependencies": {
-    "@rschedule/rschedule": "^0.0.6",
+    "@rschedule/rschedule": "^0.1.0",
     "core-js": "^2.5.7"
   },
   "peerDependencies": {
