--- a/packages/rschedule/package.json
+++ b/packages/rschedule/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rschedule/rschedule",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A typescript library for working with recurring dates and events.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
@@ -67,16 +67,16 @@
   },
   "dependencies": {
     "core-js": "^2.5.7",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.sorteduniq": "^4.2.0",
     "lodash.uniq": "^4.5.0",
-    "lodash.uniqwith": "^4.5.0",
-    "lodash.clonedeep": "^4.5.0"
+    "lodash.uniqwith": "^4.5.0"
   },
   "devDependencies": {
+    "@types/lodash.clonedeep": "^4.5.4",
     "@types/lodash.sorteduniq": "^4.2.4",
     "@types/lodash.uniq": "^4.5.4",
     "@types/lodash.uniqwith": "^4.5.4",
-    "@types/lodash.clonedeep": "^4.5.4",
     "codecov": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
     "gh-pages": "^1.2.0",
