--- a/packages/standard-date-adapter/package.json
+++ b/packages/standard-date-adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rschedule/standard-date-adapter",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "An rSchedule DateAdapter for the standard javascript Date object.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
@@ -66,28 +66,23 @@
   "engines": {
     "node": ">=8.9"
   },
-  "dependencies": {
-    "@rschedule/rschedule": "^0.2.0",
-    "core-js": "^2.5.7"
-  },
   "peerDependencies": {
+    "@rschedule/rschedule": "^0.2.0",
     "date-fns": "^1.29.0"
   },
   "devDependencies": {
-    "codecov": "^3.0.2",
-    "cz-conventional-changelog": "^2.1.0",
-    "gh-pages": "^1.2.0",
-    "npm-run-all": "^4.1.3",
-    "nyc": "^12.0.2",
-    "opn-cli": "^3.1.0",
-    "prettier": "^1.13.4",
-    "standard-version": "^4.4.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-immutable": "^4.5.4",
-    "typedoc": "^0.11.1",
-    "typescript": "^2.9.1"
+    "codecov": "file:../../node_modules/codecov",
+    "cz-conventional-changelog": "file:../../node_modules/cz-conventional-changelog",
+    "npm-run-all": "file:../../node_modules/npm-run-all",
+    "nyc": "file:../../node_modules/nyc",
+    "opn-cli": "file:../../node_modules/opn-cli",
+    "prettier": "file:../../node_modules/prettier",
+    "standard-version": "file:../../node_modules/standard-version",
+    "trash-cli": "file:../../node_modules/trash-cli",
+    "tslint": "file:../../node_modules/tslint",
+    "tslint-config-prettier": "file:../../node_modules/tslint-config-prettier",
+    "typedoc": "file:../../node_modules/typedoc",
+    "typescript": "file:../../node_modules/typescript"
   },
   "config": {
     "commitizen": {
