--- a/packages/moment-date-adapter/package.json
+++ b/packages/moment-date-adapter/package.json
@@ -1,113 +1,106 @@
 {
-  "name": "@rschedule/moment-date-adapter",
-  "version": "0.2.0",
-  "description": "An rSchedule DateAdapter for \"moment\" date objects.",
-  "author": "John Carroll <john.carroll.p@gmail.com>",
-  "homepage": "https://gitlab.com/john.carroll.p/rschedule",
-  "bugs": "https://gitlab.com/john.carroll.p/rschedule/issues",
-  "repository": {
-    "type": "git",
-    "url": "https://gitlab.com/john.carroll.p/rschedule.git"
-  },
-  "license": "MIT",
-  "keywords": [
-    "rschedule",
-    "momentjs",
-    "javascript",
-    "typescript",
-    "recurring",
-    "events",
-    "dates",
-    "recurrences",
-    "calendar",
-    "icalendar",
-    "rfc"
-  ],
-  "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
-  "scripts": {
-    "info": "npm-scripts-info",
-    "build": "run-s clean && run-p build:*",
-    "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json",
-    "fix": "run-s fix:*",
-    "fix:prettier": "prettier \"src/**/*.ts\" --write",
-    "fix:tslint": "tslint --fix --project .",
-    "test": "run-s build test:*",
-    "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
-    "test:unit": "nyc --silent ava",
-    "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
-    "cov": "run-s build test:unit cov:html && opn coverage/index.html",
-    "cov:html": "nyc report --reporter=html",
-    "cov:send": "nyc report --reporter=lcov > coverage.lcov && codecov",
-    "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
-    "doc": "run-s doc:html && opn build/docs/index.html",
-    "doc:html": "typedoc src/ --target ES6 --mode file --out build/docs",
-    "doc:json": "typedoc src/ --target ES6 --mode file --json build/docs/typedoc.json",
-    "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
-    "reset": "git clean -dfx && git reset --hard && npm i",
-    "clean": "trash build test",
-    "all": "run-s reset test cov:check doc:html",
-    "format": "prettier --write --trailing-comma=es5 'src/**/*.ts'"
-  },
-  "scripts-info": {
-    "info": "Display information about the package scripts",
-    "build": "Clean and rebuild the project",
-    "fix": "Try to automatically fix any linting problems",
-    "test": "Lint and unit test the project",
-    "watch": "Watch and rebuild the project on save, then rerun relevant tests",
-    "cov": "Rebuild, run tests, then create and open the coverage report",
-    "doc": "Generate HTML API documentation and open it in a browser",
-    "doc:json": "Generate API documentation in typedoc JSON format",
-    "version": "Bump package.json version, update CHANGELOG.md, tag release",
-    "reset": "Delete all untracked files and reset the repo to the last commit",
-    "prepare-release": "One-step: clean, build, test, publish docs, and prep a release"
-  },
-  "engines": {
-    "node": ">=8.9"
-  },
-  "dependencies": {
-    "@rschedule/rschedule": "^0.2.0",
-    "core-js": "^2.5.7"
-  },
-  "peerDependencies": {
-    "moment": "^2.0.0"
-  },
-  "optionalDependencies": {
-    "moment-timezone": "^0.5.21"
-  },
-  "devDependencies": {
-    "@types/moment": "^2.13.0",
-    "@types/moment-timezone": "^0.5.7",
-    "codecov": "^3.0.2",
-    "cz-conventional-changelog": "^2.1.0",
-    "gh-pages": "^1.2.0",
-    "npm-run-all": "^4.1.3",
-    "nyc": "^12.0.2",
-    "opn-cli": "^3.1.0",
-    "prettier": "^1.13.4",
-    "standard-version": "^4.4.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-immutable": "^4.5.4",
-    "typedoc": "^0.11.1",
-    "typescript": "^2.9.1"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "nyc": {
-    "exclude": [
-      "**/*.spec.js"
-    ]
-  }
+	"name": "@rschedule/moment-date-adapter",
+	"version": "0.2.1",
+	"description": "An rSchedule DateAdapter for \"moment\" date objects.",
+	"author": "John Carroll <john.carroll.p@gmail.com>",
+	"homepage": "https://gitlab.com/john.carroll.p/rschedule",
+	"bugs": "https://gitlab.com/john.carroll.p/rschedule/issues",
+	"repository": {
+		"type": "git",
+		"url": "https://gitlab.com/john.carroll.p/rschedule.git"
+	},
+	"license": "MIT",
+	"keywords": [
+		"rschedule",
+		"momentjs",
+		"javascript",
+		"typescript",
+		"recurring",
+		"events",
+		"dates",
+		"recurrences",
+		"calendar",
+		"icalendar",
+		"rfc"
+	],
+	"main": "build/main/index.js",
+	"typings": "build/main/index.d.ts",
+	"module": "build/module/index.js",
+	"scripts": {
+		"info": "npm-scripts-info",
+		"build": "run-s clean && run-p build:*",
+		"build:main": "tsc -p tsconfig.json",
+		"build:module": "tsc -p tsconfig.module.json",
+		"fix": "run-s fix:*",
+		"fix:prettier": "prettier \"src/**/*.ts\" --write",
+		"fix:tslint": "tslint --fix --project .",
+		"test": "run-s build test:*",
+		"test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
+		"test:unit": "nyc --silent ava",
+		"watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
+		"cov": "run-s build test:unit cov:html && opn coverage/index.html",
+		"cov:html": "nyc report --reporter=html",
+		"cov:send": "nyc report --reporter=lcov > coverage.lcov && codecov",
+		"cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
+		"doc": "run-s doc:html && opn build/docs/index.html",
+		"doc:html": "typedoc src/ --target ES6 --mode file --out build/docs",
+		"doc:json": "typedoc src/ --target ES6 --mode file --json build/docs/typedoc.json",
+		"doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
+		"reset": "git clean -dfx && git reset --hard && npm i",
+		"clean": "trash build test",
+		"all": "run-s reset test cov:check doc:html",
+		"format": "prettier --write --trailing-comma=es5 'src/**/*.ts'"
+	},
+	"scripts-info": {
+		"info": "Display information about the package scripts",
+		"build": "Clean and rebuild the project",
+		"fix": "Try to automatically fix any linting problems",
+		"test": "Lint and unit test the project",
+		"watch": "Watch and rebuild the project on save, then rerun relevant tests",
+		"cov": "Rebuild, run tests, then create and open the coverage report",
+		"doc": "Generate HTML API documentation and open it in a browser",
+		"doc:json": "Generate API documentation in typedoc JSON format",
+		"version": "Bump package.json version, update CHANGELOG.md, tag release",
+		"reset": "Delete all untracked files and reset the repo to the last commit",
+		"prepare-release": "One-step: clean, build, test, publish docs, and prep a release"
+	},
+	"engines": {
+		"node": ">=8.9"
+	},
+	"peerDependencies": {
+		"@rschedule/rschedule": "^0.2.0",
+		"moment": "^2.0.0"
+	},
+	"optionalDependencies": {
+		"moment-timezone": "^0.5.21"
+	},
+	"devDependencies": {
+		"codecov": "file:../../node_modules/codecov",
+		"cz-conventional-changelog": "file:../../node_modules/cz-conventional-changelog",
+		"npm-run-all": "file:../../node_modules/npm-run-all",
+		"nyc": "file:../../node_modules/nyc",
+		"opn-cli": "file:../../node_modules/opn-cli",
+		"prettier": "file:../../node_modules/prettier",
+		"standard-version": "file:../../node_modules/standard-version",
+		"trash-cli": "file:../../node_modules/trash-cli",
+		"tslint": "file:../../node_modules/tslint",
+		"tslint-config-prettier": "file:../../node_modules/tslint-config-prettier",
+		"typedoc": "file:../../node_modules/typedoc",
+		"typescript": "file:../../node_modules/typescript"
+	},
+	"config": {
+		"commitizen": {
+			"path": "cz-conventional-changelog"
+		}
+	},
+	"prettier": {
+		"semi": false,
+		"singleQuote": true,
+		"trailingComma": "es5"
+	},
+	"nyc": {
+		"exclude": [
+			"**/*.spec.js"
+		]
+	}
 }
