--- a/packages/luxon-date-adapter/package.json
+++ b/packages/luxon-date-adapter/package.json
@@ -49,7 +49,8 @@
     "reset": "git clean -dfx && git reset --hard && npm i",
     "clean": "trash build test",
     "all": "run-s reset test cov:check doc:html",
-    "format": "prettier --write --trailing-comma=es5 'src/**/*.ts'"
+    "format": "prettier --write --trailing-comma=es5 'src/**/*.ts'",
+    "prepublish": "yarn build"
   },
   "scripts-info": {
     "info": "Display information about the package scripts",
