--- a/packages/rschedule/package.json
+++ b/packages/rschedule/package.json
@@ -47,7 +47,8 @@
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "reset": "git clean -dfx && git reset --hard && yarn i",
     "clean": "trash build test",
-    "all": "run-s reset test cov:check doc:html"
+    "all": "run-s reset test cov:check doc:html",
+    "prepublish": "yarn build"
   },
   "scripts-info": {
     "info": "Display information about the package scripts",
