--- a/package.json
+++ b/package.json
@@ -7,16 +7,24 @@
     "packages/*"
   ],
   "scripts": {
+    "bootstrap": "lerna bootstrap --use-workspaces",
+    "build": "run-p build:*:*",
+    "build:standard-date-adapter:main": "tsc -p packages/standard-date-adapter/tsconfig.json",
+    "build:standard-date-adapter:module": "tsc -p packages/standard-date-adapter/tsconfig.module.json",
+    "build:luxon-date-adapter:main": "tsc -p packages/luxon-date-adapter/tsconfig.json",
+    "build:luxon-date-adapter:module": "tsc -p packages/luxon-date-adapter/tsconfig.module.json",
+    "build:moment-date-adapter:main": "tsc -p packages/moment-date-adapter/tsconfig.json",
+    "build:moment-date-adapter:module": "tsc -p packages/moment-date-adapter/tsconfig.module.json",
+    "build:ical-tools:main": "tsc -p packages/ical-tools/tsconfig.json",
+    "build:ical-tools:module": "tsc -p packages/ical-tools/tsconfig.module.json",
+    "build:rschedule:main": "tsc -p packages/rschedule/tsconfig.json",
+    "build:rschedule:module": "tsc -p packages/rschedule/tsconfig.module.json",
     "test": "jest --config './jest.config.json'",
     "test:watch": "jest --config './jest.config.json' --watch",
     "test:prod": "yarn lint && yarn test --coverage --no-cache",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "bootstrap": "lerna bootstrap --use-workspaces"
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": true
+    "format": "prettier-tslint fix packages/**/src/**/**/**/**/*.ts tests/**/**/**/**/**/*.ts",
+    "clean:build": "trash packages/*/build",
+    "clean:modules": "trash yarn.lock node_modules packages/*/node_modules"
   },
   "devDependencies": {
     "@types/jest": "^22.0.0",
@@ -28,34 +36,20 @@
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.7",
     "@types/node": "^10.0.3",
-    "codecov": "^3.0.2",
-    "colors": "^1.1.2",
-    "commitizen": "^2.9.6",
-    "coveralls": "^3.0.0",
-    "cross-env": "^5.0.1",
-    "cz-conventional-changelog": "^2.0.0",
     "date-fns": "^1.29.0",
-    "husky": "^0.14.0",
     "jest": "^22.0.2",
     "lerna": "^3.0.1",
-    "lint-staged": "^7.1.3",
     "luxon": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "moment": "^2.0.0",
     "moment-timezone": "^0.5.21",
-    "nyc": "^12.0.2",
-    "opn-cli": "^3.1.0",
-    "prettier": "^1.13.4",
-    "prompt": "^1.0.0",
-    "semantic-release": "^15.0.0",
-    "standard-version": "^4.4.0",
+    "prettier": "^1.15.3",
+    "prettier-tslint": "^0.4.1",
     "trash-cli": "^1.4.0",
     "ts-jest": "^22.0.0",
     "ts-node": "^6.0.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
-    "typedoc": "^0.11.1",
-    "typescript": "^2.9.1",
-    "validate-commit-msg": "^2.12.2"
+    "typescript": "^2.9.1"
   }
 }
