--- a/packages/moment-date-adapter/package.json
+++ b/packages/moment-date-adapter/package.json
@@ -1,107 +1,48 @@
 {
-	"name": "@rschedule/moment-date-adapter",
-	"version": "0.4.1",
-	"description": "An rSchedule DateAdapter for \"moment\" date objects.",
-	"author": "John Carroll <john.carroll.p@gmail.com>",
-	"homepage": "https://gitlab.com/john.carroll.p/rschedule",
-	"bugs": "https://gitlab.com/john.carroll.p/rschedule/issues",
-	"repository": {
-		"type": "git",
-		"url": "https://gitlab.com/john.carroll.p/rschedule.git"
-	},
+  "name": "@rschedule/moment-date-adapter",
+  "version": "0.4.1",
+  "description": "An rSchedule DateAdapter for \"moment\" date objects.",
+  "author": "John Carroll <john.carroll.p@gmail.com>",
+  "homepage": "https://gitlab.com/john.carroll.p/rschedule",
+  "bugs": "https://gitlab.com/john.carroll.p/rschedule/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://gitlab.com/john.carroll.p/rschedule.git"
+  },
   "license": "Unlicense",
-	"keywords": [
-		"rschedule",
-		"momentjs",
-		"javascript",
-		"typescript",
-		"recurring",
-		"events",
-		"dates",
-		"recurrences",
-		"calendar",
-		"icalendar",
-		"rfc"
-	],
-	"main": "build/main/index.js",
-	"typings": "build/main/index.d.ts",
-	"module": "build/module/index.js",
-	"scripts": {
-		"info": "npm-scripts-info",
-		"build": "run-s clean && run-p build:*",
-		"build:main": "tsc -p tsconfig.json",
-		"build:module": "tsc -p tsconfig.module.json",
-		"fix": "run-s fix:*",
-		"fix:prettier": "prettier \"src/**/*.ts\" --write",
-		"fix:tslint": "tslint --fix --project .",
-		"test": "run-s build test:*",
-		"test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
-		"test:unit": "nyc --silent ava",
-		"watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
-		"cov": "run-s build test:unit cov:html && opn coverage/index.html",
-		"cov:html": "nyc report --reporter=html",
-		"cov:send": "nyc report --reporter=lcov > coverage.lcov && codecov",
-		"cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
-		"doc": "run-s doc:html && opn build/docs/index.html",
-		"doc:html": "typedoc src/ --target ES6 --mode file --out build/docs",
-		"doc:json": "typedoc src/ --target ES6 --mode file --json build/docs/typedoc.json",
-		"doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
-		"reset": "git clean -dfx && git reset --hard && npm i",
-		"clean": "trash build test",
-		"all": "run-s reset test cov:check doc:html",
-		"format": "prettier --write --trailing-comma=es5 'src/**/*.ts'",
-		"prepublish": "yarn build"
-	},
-	"scripts-info": {
-		"info": "Display information about the package scripts",
-		"build": "Clean and rebuild the project",
-		"fix": "Try to automatically fix any linting problems",
-		"test": "Lint and unit test the project",
-		"watch": "Watch and rebuild the project on save, then rerun relevant tests",
-		"cov": "Rebuild, run tests, then create and open the coverage report",
-		"doc": "Generate HTML API documentation and open it in a browser",
-		"doc:json": "Generate API documentation in typedoc JSON format",
-		"version": "Bump package.json version, update CHANGELOG.md, tag release",
-		"reset": "Delete all untracked files and reset the repo to the last commit",
-		"prepare-release": "One-step: clean, build, test, publish docs, and prep a release"
-	},
-	"engines": {
-		"node": ">=8.9"
-	},
-	"peerDependencies": {
-		"@rschedule/rschedule": "^0.6.0",
-		"moment": "^2.0.0"
-	},
-	"optionalDependencies": {
-		"moment-timezone": "^0.5.21"
-	},
-	"devDependencies": {
-		"codecov": "file:../../node_modules/codecov",
-		"cz-conventional-changelog": "file:../../node_modules/cz-conventional-changelog",
-		"npm-run-all": "file:../../node_modules/npm-run-all",
-		"nyc": "file:../../node_modules/nyc",
-		"opn-cli": "file:../../node_modules/opn-cli",
-		"prettier": "file:../../node_modules/prettier",
-		"standard-version": "file:../../node_modules/standard-version",
-		"trash-cli": "file:../../node_modules/trash-cli",
-		"tslint": "file:../../node_modules/tslint",
-		"tslint-config-prettier": "file:../../node_modules/tslint-config-prettier",
-		"typedoc": "file:../../node_modules/typedoc",
-		"typescript": "file:../../node_modules/typescript"
-	},
-	"config": {
-		"commitizen": {
-			"path": "cz-conventional-changelog"
-		}
-	},
-	"prettier": {
-		"semi": false,
-		"singleQuote": true,
-		"trailingComma": "es5"
-	},
-	"nyc": {
-		"exclude": [
-			"**/*.spec.js"
-		]
-	}
+  "keywords": [
+    "rschedule",
+    "momentjs",
+    "javascript",
+    "typescript",
+    "recurring",
+    "events",
+    "dates",
+    "recurrences",
+    "calendar",
+    "icalendar",
+    "rfc"
+  ],
+  "main": "build/main/index.js",
+  "typings": "build/main/index.d.ts",
+  "module": "build/module/index.js",
+  "engines": {
+    "node": ">=8.9"
+  },
+  "scripts": {
+    "build": "yarn build:main && yarn build:module",
+    "build:main": "tsc -p tsconfig.json",
+    "build:module": "tsc -p tsconfig.module.json",
+    "prepublish": "yarn build"
+  },
+  "peerDependencies": {
+    "@rschedule/rschedule": "^0.6.0",
+    "moment": "^2.0.0"
+  },
+  "optionalDependencies": {
+    "moment-timezone": "^0.5.21"
+  },
+  "devDependencies": {
+    "typescript": "^2.9.1"
+  }
 }
