--- a/jest.config.json
+++ b/jest.config.json
@@ -3,21 +3,10 @@
     ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
   },
   "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-  "moduleDirectories": [
-    "node_modules"
-  ],
-  "moduleFileExtensions": [
-    "ts",
-    "tsx",
-    "js"
-  ],
-  "modulePathIgnorePatterns": [
-    "tmp"
-  ],
-  "coveragePathIgnorePatterns": [
-    "/node_modules/",
-    "/tests/"
-  ],
+  "moduleDirectories": ["node_modules"],
+  "moduleFileExtensions": ["ts", "tsx", "js"],
+  "modulePathIgnorePatterns": ["tmp"],
+  "coveragePathIgnorePatterns": ["/node_modules/", "/tests/"],
   "coverageThreshold": {
     "global": {
       "branches": 90,
