--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "run-p build:*:*",
+    "build": "yarn clean:build && run-p build:*:*",
+    "build:standard-date-adapter": "trash packages/standard-date-adapter/build && run-p build:standard-date-adapter:*",
     "build:standard-date-adapter:main": "tsc -p packages/standard-date-adapter/tsconfig.json",
     "build:standard-date-adapter:module": "tsc -p packages/standard-date-adapter/tsconfig.module.json",
+    "build:luxon-date-adapter": "trash packages/luxon-date-adapter/build && run-p build:luxon-date-adapter:*",
     "build:luxon-date-adapter:main": "tsc -p packages/luxon-date-adapter/tsconfig.json",
     "build:luxon-date-adapter:module": "tsc -p packages/luxon-date-adapter/tsconfig.module.json",
+    "build:moment-date-adapter": "trash packages/moment-date-adapter/build && run-p build:moment-date-adapter:*",
     "build:moment-date-adapter:main": "tsc -p packages/moment-date-adapter/tsconfig.json",
     "build:moment-date-adapter:module": "tsc -p packages/moment-date-adapter/tsconfig.module.json",
+    "build:ical-tools": "trash packages/ical-tools/build && run-p build:ical-tools:*",
     "build:ical-tools:main": "tsc -p packages/ical-tools/tsconfig.json",
     "build:ical-tools:module": "tsc -p packages/ical-tools/tsconfig.module.json",
+    "build:rschedule": "trash packages/rschedule/build && run-p build:rschedule:*",
     "build:rschedule:main": "tsc -p packages/rschedule/tsconfig.json",
     "build:rschedule:module": "tsc -p packages/rschedule/tsconfig.module.json",
     "test": "jest --config './jest.config.json'",
@@ -28,21 +33,21 @@
   },
   "devDependencies": {
     "@types/jest": "^22.0.0",
+    "@types/lodash.clonedeep": "^4.5.4",
     "@types/lodash.sorteduniq": "^4.2.4",
     "@types/lodash.uniq": "^4.5.4",
     "@types/lodash.uniqwith": "^4.5.4",
-    "@types/lodash.clonedeep": "^4.5.4",
     "@types/luxon": "^1.2.2",
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.7",
     "@types/node": "^10.0.3",
-    "date-fns": "^1.29.0",
     "jest": "^22.0.2",
+    "jest-cli": "^23.6.0",
     "lerna": "^3.0.1",
     "luxon": "^1.3.3",
-    "npm-run-all": "^4.1.3",
     "moment": "^2.0.0",
     "moment-timezone": "^0.5.21",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.15.3",
     "prettier-tslint": "^0.4.1",
     "trash-cli": "^1.4.0",
