--- a/packages/ical-tools/package.json
+++ b/packages/ical-tools/package.json
@@ -29,6 +29,11 @@
     "prepublish": "yarn build"
   },
   "devDependencies": {
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "ical.js": "^1.3.0"
+  },
+  "peerDependencies": {
+    "ical.js": "^1.3.0",
+    "@rschedule/rschedule": "^0.6.1"
   }
 }
