Upd ical-tools package -> serializers & and json serializers

--- a/jest.config.json
+++ b/jest.config.json
@@ -19,6 +19,7 @@
   "verbose": true,
   "testURL": "http://localhost/",
   "moduleNameMapper": {
+    "@rschedule/serializers/(.*)": "<rootDir>/packages/serializers/src/lib/$1",
     "@rschedule/(.*)": "<rootDir>/packages/$1/src"
   },
   "globals": {
