--- a/packages/luxon-date-adapter/package.json
+++ b/packages/luxon-date-adapter/package.json
@@ -30,14 +30,16 @@
     "node": ">=8.9"
   },
   "scripts": {
-    "build": "yarn build:main && yarn build:module",
+    "build": "yarn clean:build && yarn build:main && yarn build:module",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
+    "clean:build": "trash build",
     "prepublish": "yarn build"
   },
   "peerDependencies": {
     "@rschedule/rschedule": "^0.6.0",
-    "luxon": "^1.3.3"
+    "luxon": "^1.3.3",
+    "trash-cli": "^1.4.0"
   },
   "devDependencies": {
     "typescript": "^2.9.1"
