--- a/packages/moment-date-adapter/package.json
+++ b/packages/moment-date-adapter/package.json
@@ -30,9 +30,10 @@
     "node": ">=8.9"
   },
   "scripts": {
-    "build": "yarn build:main && yarn build:module",
+    "build": "yarn clean:build && yarn build:main && yarn build:module",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
+    "clean:build": "trash build",
     "prepublish": "yarn build"
   },
   "peerDependencies": {
@@ -43,6 +44,7 @@
     "moment-timezone": "^0.5.21"
   },
   "devDependencies": {
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "trash-cli": "^1.4.0"
   }
 }
