--- a/packages/rschedule/package.json
+++ b/packages/rschedule/package.json
@@ -29,9 +29,10 @@
     "node": ">=8.9"
   },
   "scripts": {
-    "build": "yarn build:main && yarn build:module",
+    "build": "yarn clean:build && yarn build:main && yarn build:module",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
+    "clean:build": "trash build",
     "prepublish": "yarn build"
   },
   "dependencies": {
@@ -42,6 +43,7 @@
     "@rschedule/ical-tools": "^0.0.1"
   },
   "devDependencies": {
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "trash-cli": "^1.4.0"
   }
 }
