--- a/packages/serializers/package.json
+++ b/packages/serializers/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@rschedule/ical-tools",
+  "name": "@rschedule/serializers",
   "version": "0.0.1",
-  "description": "Utility functions for parsing iCalendar strings.",
+  "description": "Utility functions for parsing/serializing rSchedule objects in various formats.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
   "bugs": "https://gitlab.com/john.carroll.p/rschedule/issues",
@@ -23,17 +23,18 @@
     "node": ">=8.9"
   },
   "scripts": {
-    "build": "yarn build:main && yarn build:module",
+    "build": "yarn clean:build && yarn build:main && yarn build:module",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
+    "clean:build": "trash build",
     "prepublish": "yarn build"
   },
   "devDependencies": {
     "typescript": "^2.9.1",
-    "ical.js": "^1.3.0"
+    "ical.js": "^1.3.0",
+    "trash-cli": "^1.4.0"
   },
   "peerDependencies": {
-    "ical.js": "^1.3.0",
     "@rschedule/rschedule": "^0.6.1"
   }
 }
