--- a/packages/standard-date-adapter/package.json
+++ b/packages/standard-date-adapter/package.json
@@ -29,15 +29,17 @@
     "node": ">=8.9"
   },
   "scripts": {
-    "build": "yarn build:main && yarn build:module",
+    "build": "yarn clean:build && yarn build:main && yarn build:module",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
+    "clean:build": "trash build",
     "prepublish": "yarn build"
   },
   "peerDependencies": {
     "@rschedule/rschedule": "^0.6.0"
   },
   "devDependencies": {
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "trash-cli": "^1.4.0"
   }
 }
