fix: tsconfig builds

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "yarn clean:build && run-p build:*:*",
+    "build": "yarn clean:build && yarn build:rschedule && run-p build:*:*",
+    "build:rschedule": "trash packages/rschedule/build && run-p build:rschedule:*",
+    "build:rschedule:main": "tsc -p packages/rschedule/tsconfig.json",
+    "build:rschedule:module": "tsc -p packages/rschedule/tsconfig.module.json",
     "build:standard-date-adapter": "trash packages/standard-date-adapter/build && run-p build:standard-date-adapter:*",
     "build:standard-date-adapter:main": "tsc -p packages/standard-date-adapter/tsconfig.json",
     "build:standard-date-adapter:module": "tsc -p packages/standard-date-adapter/tsconfig.module.json",
@@ -18,16 +21,14 @@
     "build:moment-date-adapter": "trash packages/moment-date-adapter/build && run-p build:moment-date-adapter:*",
     "build:moment-date-adapter:main": "tsc -p packages/moment-date-adapter/tsconfig.json",
     "build:moment-date-adapter:module": "tsc -p packages/moment-date-adapter/tsconfig.module.json",
-    "build:ical-tools": "trash packages/ical-tools/build && run-p build:ical-tools:*",
-    "build:ical-tools:main": "tsc -p packages/ical-tools/tsconfig.json",
-    "build:ical-tools:module": "tsc -p packages/ical-tools/tsconfig.module.json",
-    "build:rschedule": "trash packages/rschedule/build && run-p build:rschedule:*",
-    "build:rschedule:main": "tsc -p packages/rschedule/tsconfig.json",
-    "build:rschedule:module": "tsc -p packages/rschedule/tsconfig.module.json",
+    "build:serializers": "trash packages/serializers/build && run-p build:serializers:*",
+    "build:serializers:main": "tsc -p packages/serializers/tsconfig.json",
+    "build:serializers:module": "tsc -p packages/serializers/tsconfig.module.json",
     "test": "jest --config './jest.config.json'",
     "test:watch": "jest --config './jest.config.json' --watch",
     "test:prod": "yarn lint && yarn test --coverage --no-cache",
     "format": "prettier-tslint fix packages/**/src/**/**/**/**/*.ts tests/**/**/**/**/**/*.ts",
+    "clean": "yarn clean:build && yarn clean:modules",
     "clean:build": "trash packages/*/build",
     "clean:modules": "trash yarn.lock node_modules packages/*/node_modules"
   },
