--- a/packages/luxon-date-adapter/tsconfig.module.json
+++ b/packages/luxon-date-adapter/tsconfig.module.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "target": "esnext",
     "outDir": "build/module",
+    "declarationDir": "build/module",
     "module": "esnext"
-  },
-  "exclude": [
-    "node_modules/**"
-  ]
+  }
 }
