--- a/packages/rschedule/tsconfig.json
+++ b/packages/rschedule/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "outDir": "build/main",
     "rootDir": "src",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "outDir": "build/main",
+    "declarationDir": "build/main",
     "paths": {},
-    "typeRoots": ["node_modules/@types", "src/types"],
-    "allowSyntheticDefaultImports": true,
     "downlevelIteration": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules/**"]
+  "include": ["src/**/*.ts"]
 }
