--- a/packages/serializers/package.json
+++ b/packages/serializers/package.json
@@ -34,6 +34,9 @@
     "ical.js": "^1.3.0",
     "trash-cli": "^1.4.0"
   },
+  "optionalDependencies": {
+    "ical.js": "^1.3.0"
+  },
   "peerDependencies": {
     "@rschedule/rschedule": "^0.6.1"
   }
