--- a/packages/serializers/tsconfig.module.json
+++ b/packages/serializers/tsconfig.module.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "esnext",
     "outDir": "build/module",
+    "declarationDir": "build/module",
     "module": "esnext"
   }
 }
