--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "packages": ["packages/*"],
-  "version": "0.6.1",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "0.7.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
