--- a/packages/moment-date-adapter/package.json
+++ b/packages/moment-date-adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rschedule/moment-date-adapter",
-  "version": "0.4.1",
+  "version": "0.7.0",
   "description": "An rSchedule DateAdapter for \"moment\" date objects.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
@@ -44,7 +44,7 @@
     "moment-timezone": "^0.5.21"
   },
   "devDependencies": {
-    "typescript": "^2.9.1",
-    "trash-cli": "^1.4.0"
+    "trash-cli": "^1.4.0",
+    "typescript": "^2.9.1"
   }
 }
