--- a/packages/serializers/package.json
+++ b/packages/serializers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rschedule/serializers",
-  "version": "0.0.1",
+  "version": "0.7.0",
   "description": "Utility functions for parsing/serializing rSchedule objects in various formats.",
   "author": "John Carroll <john.carroll.p@gmail.com>",
   "homepage": "https://gitlab.com/john.carroll.p/rschedule",
@@ -30,9 +30,9 @@
     "prepublish": "yarn build"
   },
   "devDependencies": {
-    "typescript": "^2.9.1",
     "ical.js": "^1.3.0",
-    "trash-cli": "^1.4.0"
+    "trash-cli": "^1.4.0",
+    "typescript": "^2.9.1"
   },
   "optionalDependencies": {
     "ical.js": "^1.3.0"
