--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "yarn clean:build && yarn build:rschedule && run-p build:*:*",
-    "build:rschedule": "trash packages/rschedule/build && run-p build:rschedule:*",
-    "build:rschedule:main": "tsc -p packages/rschedule/tsconfig.json",
-    "build:rschedule:module": "tsc -p packages/rschedule/tsconfig.module.json",
+    "build": "yarn clean:build && yarn prebuild:rschedule && run-p build:*:*",
+    "prebuild:rschedule": "trash packages/rschedule/build && run-p prebuild:rschedule:*",
+    "prebuild:rschedule:main": "tsc -p packages/rschedule/tsconfig.json",
+    "prebuild:rschedule:module": "tsc -p packages/rschedule/tsconfig.module.json",
     "build:standard-date-adapter": "trash packages/standard-date-adapter/build && run-p build:standard-date-adapter:*",
     "build:standard-date-adapter:main": "tsc -p packages/standard-date-adapter/tsconfig.json",
     "build:standard-date-adapter:module": "tsc -p packages/standard-date-adapter/tsconfig.module.json",
@@ -21,9 +21,12 @@
     "build:moment-date-adapter": "trash packages/moment-date-adapter/build && run-p build:moment-date-adapter:*",
     "build:moment-date-adapter:main": "tsc -p packages/moment-date-adapter/tsconfig.json",
     "build:moment-date-adapter:module": "tsc -p packages/moment-date-adapter/tsconfig.module.json",
-    "build:serializers": "trash packages/serializers/build && run-p build:serializers:*",
-    "build:serializers:main": "tsc -p packages/serializers/tsconfig.json",
-    "build:serializers:module": "tsc -p packages/serializers/tsconfig.module.json",
+    "build:ical-tools": "trash packages/ical-tools/build && run-p build:ical-tools:*",
+    "build:ical-tools:main": "tsc -p packages/ical-tools/tsconfig.json",
+    "build:ical-tools:module": "tsc -p packages/ical-tools/tsconfig.module.json",
+    "build:json-tools": "trash packages/json-tools/build && run-p build:json-tools:*",
+    "build:json-tools:main": "tsc -p packages/json-tools/tsconfig.json",
+    "build:json-tools:module": "tsc -p packages/json-tools/tsconfig.module.json",
     "test": "jest --config './jest.config.json'",
     "test:watch": "jest --config './jest.config.json' --watch",
     "test:prod": "yarn lint && yarn test --coverage --no-cache",
