--- a/packages/moment-date-adapter/package.json
+++ b/packages/moment-date-adapter/package.json
@@ -43,6 +43,8 @@
     "moment-timezone": "^0.5.21"
   },
   "devDependencies": {
+    "@rschedule/rschedule": "^0.6.0",
+    "moment-timezone": "^0.5.21",
     "typescript": "^2.9.1"
   }
 }
