update build scripts

--- a/package.json
+++ b/package.json
@@ -7,29 +7,14 @@
     "packages/*"
   ],
   "scripts": {
-    "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "yarn clean:build && yarn prebuild:rschedule && run-p build:*:*",
-    "prebuild:rschedule": "trash packages/rschedule/build && run-p prebuild:rschedule:*",
-    "prebuild:rschedule:main": "tsc -p packages/rschedule/tsconfig.json",
-    "prebuild:rschedule:module": "tsc -p packages/rschedule/tsconfig.module.json",
-    "build:standard-date-adapter": "trash packages/standard-date-adapter/build && run-p build:standard-date-adapter:*",
-    "build:standard-date-adapter:main": "tsc -p packages/standard-date-adapter/tsconfig.json",
-    "build:standard-date-adapter:module": "tsc -p packages/standard-date-adapter/tsconfig.module.json",
-    "build:luxon-date-adapter": "trash packages/luxon-date-adapter/build && run-p build:luxon-date-adapter:*",
-    "build:luxon-date-adapter:main": "tsc -p packages/luxon-date-adapter/tsconfig.json",
-    "build:luxon-date-adapter:module": "tsc -p packages/luxon-date-adapter/tsconfig.module.json",
-    "build:moment-date-adapter": "trash packages/moment-date-adapter/build && run-p build:moment-date-adapter:*",
-    "build:moment-date-adapter:main": "tsc -p packages/moment-date-adapter/tsconfig.json",
-    "build:moment-date-adapter:module": "tsc -p packages/moment-date-adapter/tsconfig.module.json",
-    "build:moment-tz-date-adapter": "trash packages/moment-tz-date-adapter/build && run-p build:moment-tz-date-adapter:*",
-    "build:moment-tz-date-adapter:main": "tsc -p packages/moment-tz-date-adapter/tsconfig.json",
-    "build:moment-tz-date-adapter:module": "tsc -p packages/moment-tz-date-adapter/tsconfig.module.json",
-    "build:ical-tools": "trash packages/ical-tools/build && run-p build:ical-tools:*",
-    "build:ical-tools:main": "tsc -p packages/ical-tools/tsconfig.json",
-    "build:ical-tools:module": "tsc -p packages/ical-tools/tsconfig.module.json",
-    "build:json-tools": "trash packages/json-tools/build && run-p build:json-tools:*",
-    "build:json-tools:main": "tsc -p packages/json-tools/tsconfig.json",
-    "build:json-tools:module": "tsc -p packages/json-tools/tsconfig.module.json",
+    "build": "yarn prebuild:rschedule && run-p build:*",
+    "prebuild:rschedule": "yarn --cwd='./packages/rschedule' build",
+    "build:standard-date-adapter": "yarn --cwd='./packages/standard-date-adapter' build",
+    "build:luxon-date-adapter": "yarn --cwd='./packages/luxon-date-adapter' build",
+    "build:moment-date-adapter": "yarn --cwd='./packages/moment-date-adapter' build",
+    "build:moment-tz-date-adapter": "yarn --cwd='./packages/moment-tz-date-adapter' build",
+    "build:json-tools": "yarn --cwd='./packages/json-tools' build",
+    "wipBuild:ical-tools": "yarn --cwd='./packages/ical-tools' build",
     "test": "jest --config './jest.config.json'",
     "test:watch": "jest --config './jest.config.json' --watch",
     "test:prod": "yarn lint && yarn test --coverage --no-cache",
