--- a/packages/json-tools/package.json
+++ b/packages/json-tools/package.json
@@ -26,8 +26,7 @@
     "build": "yarn clean:build && yarn build:main && yarn build:module",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "clean:build": "trash build",
-    "prepublish": "yarn build"
+    "clean:build": "trash build"
   },
   "peerDependencies": {
     "@rschedule/rschedule": "^0.6.1"
