--- a/packages/rschedule/package.json
+++ b/packages/rschedule/package.json
@@ -32,8 +32,7 @@
     "build": "yarn clean:build && yarn build:main && yarn build:module",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "clean:build": "trash build",
-    "prepublish": "yarn build"
+    "clean:build": "trash build"
   },
   "devDependencies": {
     "trash-cli": "^1.4.0",
