chore: tsconfig update

--- a/packages/ical-tools/tsconfig.json
+++ b/packages/ical-tools/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "rootDir": "src",
+    // "rootDir": "src",
     "outDir": "build/main",
     "declarationDir": "build/main",
-    "paths": {},
     "downlevelIteration": true
   },
   "include": ["src/**/*.ts"]
