--- a/packages/moment-date-adapter/tsconfig.json
+++ b/packages/moment-date-adapter/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "rootDir": "src",
+    // "rootDir": "src",
     "outDir": "build/main",
-    "declarationDir": "build/main",
-    "paths": {}
+    "declarationDir": "build/main"
   },
   "include": ["src/**/*.ts"]
 }
