--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   },
   "devDependencies": {
     "@types/jest": "^22.0.0",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/luxon": "^1.2.2",
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.7",
     "@types/node": "^10.0.3",
-    "@types/lodash.clonedeep": "^4.5.6",
     "jest": "^22.0.2",
     "jest-cli": "^23.6.0",
     "lerna": "^3.0.1",
@@ -39,6 +39,8 @@
     "npm-run-all": "^4.1.3",
     "prettier": "^1.15.3",
     "prettier-tslint": "^0.4.1",
+    "rollup": "^1.7.4",
+    "rollup-plugin-typescript": "^1.0.1",
     "trash-cli": "^1.4.0",
     "ts-jest": "^22.0.0",
     "ts-node": "^6.0.0",
