--- a/packages/ical-tools/package.json
+++ b/packages/ical-tools/package.json
@@ -27,7 +27,7 @@
     "clean:build": "trash build .rpt2_cache"
   },
   "peerDependencies": {
-    "@rschedule/rschedule": "^0.6.1",
+    "@rschedule/rschedule": "^0.8.3-next.0",
     "ical.js": "^1.3.0"
   },
   "dependencies": {
