--- a/packages/moment-date-adapter/package.json
+++ b/packages/moment-date-adapter/package.json
@@ -34,7 +34,7 @@
     "clean:build": "trash build .rpt2_cache"
   },
   "peerDependencies": {
-    "@rschedule/rschedule": "^0.6.0",
+    "@rschedule/rschedule": "^0.8.3-next.0",
     "moment": "^2.0.0"
   },
   "devDependencies": {
