--- a/packages/rschedule/package.json
+++ b/packages/rschedule/package.json
@@ -29,13 +29,12 @@
     "node": ">=8.9"
   },
   "scripts": {
-    "build": "yarn clean:build && rollup -c",
-    "clean:build": "trash build .rpt2_cache"
+    "build": "yarn clean:build && rollup -c && rm -rf .rpt2_cache",
+    "clean:build": "rm -rf build && rm -rf .rpt2_cache"
   },
   "devDependencies": {
     "rollup": "^1.7.4",
     "rollup-plugin-typescript2": "^0.20.1",
-    "trash-cli": "^1.4.0",
     "typescript": "3.4.3"
   }
 }
