--- a/packages/luxon-date-adapter/package.json
+++ b/packages/luxon-date-adapter/package.json
@@ -34,7 +34,7 @@
     "clean:build": "rm -rf build && rm -rf .rpt2_cache"
   },
   "peerDependencies": {
-    "@rschedule/rschedule": "^0.9.0-next.0",
+    "@rschedule/rschedule": "^0.9.0",
     "luxon": "^1.3.3"
   },
   "devDependencies": {
