upd package.json keywords

--- a/packages/json-tools/package.json
+++ b/packages/json-tools/package.json
@@ -11,10 +11,10 @@
   },
   "license": "Unlicense",
   "keywords": [
+    "rschedule",
     "javascript",
     "typescript",
-    "icalendar",
-    "rfc"
+    "json"
   ],
   "main": "build/main.js",
   "typings": "build/packages/json-tools/index.d.ts",
